--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Stylesheet\styles.css">
-    <link rel="shortcut icon" href="Assets\logo\logoo.png" />
+    <link rel="shortcut icon" href="Assets\logo\logoo.png">
     <title>HOME</title>
 </head>
 <body>
